# blogapi

./: db.sqlite3  pyproject.toml
accounts/: admin.py
accounts/migrations/: 0001_initial.py
django_project/: settings.py  urls.py
posts/: models.py  permissions.py  views.py
posts/migrations/: 0001_initial.py
