[project]
name = "blogapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dj-rest-auth>=7.0.1",
    "django-allauth>=65.11.0",
    "django-cors-headers>=4.7.0",
    "djangorestframework>=3.16.1",
    "ensure>=1.0.4",
    "requests>=2.32.5",
]
